Fix code block overflow

--- a/webroot/stylesheet.css
+++ b/webroot/stylesheet.css
@@ -369,7 +369,6 @@ body {
   code, tt {
     margin: 0 2px;
     padding: 0 5px;
-    white-space: nowrap;
     border: 1px solid #eaeaea;
     background-color: #f8f8f8;
     border-radius: 3px;
